docs/grammar.ebnf
(* !! 状态：HISTORICAL —— 本文件已落后于 parser，不要当权威用 !!
   权威语法在 docs/spec.md（normative）与 selfhost/src/front/parser.dawn（实现）。
   已知不符至少包括：缺 `use a/b as c`；要求所有函数写 `-> type`（私有函数可推导）；
   使用未定义的词法符号 UPPER_IDENT；`. IDENT` 不覆盖 `Class.FIELD`。
   逐条见 docs/codebase-audit.md 的 SYN-02/SYN-03/SYN-04。

   **postfix / call_args / arg / ctor_expr 这四条不在此列**（2026-07-31 起）：
   调用统一成一般后缀、named argument 在每个调用位置语法合法之后，它们描述的
   正是 parser 做的事——本文件写对了，是实现补上了它（SYN-02/SYN-03）。
   「哪个 callee 接受 named argument」是类型规则，不是语法规则，故不在 EBNF 里。
   不逐条修的理由：手工维护第二份近似语法必然再次过期，修完只会重新伪装成可信。
   要么从 parser 的 production 生成，要么纳入 accept/reject corpus 测试（TEST-04）。
   **2026-07-30：后者已落地** —— scripts/grammar-corpus/（CI 门禁「grammar corpus」）
   把本文件想表达的规则写成可执行用例：accept/ 六篇覆盖 use/type/fn/expr/trait/const
   各族（含本文件缺的 `use … as`、可推导返回类型、opaque type、条件 impl、限定类型与
   模式、一般后缀调用、每个调用位置的具名实参），reject/ 八篇每篇首行 `# expect:` 钉住拒绝理由。
   本文件仍是 historical：语料检查 parser 对写下来的期望负责，没有机器能把散文式 EBNF
   与 parser 对齐——分叉现在会以一个失败用例出现，而不是等人读出来。 *)

(* Dawn v0.1 语法, EBNF。
   约定: 终结符加引号; NEWLINE 为语句分隔; 行尾是二元运算符/逗号/开括号时续行。
   词法: IDENT=[a-z][a-z0-9_]*  TYPEIDENT=[A-Z][A-Za-z0-9]*  EFFVAR=[a-z][a-z0-9_]*
         INT FLOAT STRING CHAR 见 spec §1.5
         CHAR = "'" ( 单个码点 | 转义 ) "'"，词法上产出一个 INT（值 = 码点） *)

module          = { top_decl } ;

top_decl        = use_decl | type_decl | alias_decl | const_decl | fn_decl
                | test_decl | trait_decl | impl_decl | effect_decl ;

(* ---- use ---- *)
use_decl        = "use" ( java_use | module_use ) ;
java_use        = "java" STRING ;
module_use      = module_path [ "." "{" import_list "}" ] ;
module_path     = IDENT { "/" IDENT } ;
import_list     = import_item { "," import_item } [ "," ] ;
import_item     = IDENT | TYPEIDENT ;

(* ---- type ---- *)
type_decl       = [ "pub" ] "type" TYPEIDENT [ type_params ]
                  "=" ( sum_type | record_type )
                  [ "derive" TYPEIDENT { "," TYPEIDENT } ] ;      (* Show / Ord *)
alias_decl      = [ "pub" ] "alias" TYPEIDENT [ type_params ] "=" type_expr ;
                  (* 透明别名 (spec §2.6); type 只声明名义类型 *)
type_params     = "[" type_param { "," type_param } "]" ;
type_param      = TYPEIDENT [ ":" TYPEIDENT { "+" TYPEIDENT } ]
                | "!" IDENT ;
                  (* 约束 [T: Trait + Trait] 仅 fn 允许; type 声明的参数不带约束 *)
                  (* "!" IDENT = 效果参数, 效果变量的显式绑定者 [T, U, !e];
                     fn / alias / type 允许, trait 与 impl 不允许; 不带约束;
                     在 fn 上与隐式引入等价 (spec §6.3), 在 alias / type 上是
                     唯一的绑定方式; effect-params-design.md 决策 2/3/4/8 *)
sum_type        = [ "|" ] variant { "|" variant } ;
variant         = TYPEIDENT [ "(" field_list ")" ] ;
record_type     = "{" field_list "}" ;
field_list      = field { "," field } [ "," ] ;
field           = IDENT ":" type_expr ;

type_expr       = fn_type | tuple_type | proj_type | applied_type ;
applied_type    = TYPEIDENT [ "[" type_expr { "," type_expr } "]" ] ;
proj_type       = TYPEIDENT "." TYPEIDENT ;
                  (* 投影 T.Item: 主体须是带 bound 的类型参数 (assoc-types-design.md) *)
tuple_type      = "(" type_expr "," type_expr { "," type_expr } ")" ;
fn_type         = "fn" "(" [ type_expr { "," type_expr } ] ")" "->" type_expr [ effect ] ;

effect          = eff_group { eff_group } ;                  (* !io !Ask 可叠写 *)
eff_group       = "!" effect_atom
                | "!" "(" effect_atom { "|" effect_atom } ")" ;
effect_atom     = "io" | EFFVAR | TYPEIDENT ;                (* TYPEIDENT: 已声明的效果 *)

(* ---- const / fn / test ---- *)
const_decl      = [ "pub" ] "const" UPPER_IDENT ":" type_expr "=" expr ;
                  (* UPPER_IDENT: 惯例全大写, 词法上同 IDENT/TYPEIDENT 均可 *)

fn_decl         = [ "pub" ] "fn" IDENT [ type_params ]
                  "(" [ param_list ] ")" "->" type_expr [ effect ] "=" expr ;
param_list      = param { "," param } [ "," ] ;
param           = IDENT ":" type_expr [ "=" expr ] ;

test_decl       = "test" STRING block ;

(* ---- trait / impl (docs/trait.md) ---- *)
trait_decl      = [ "pub" ] "trait" TYPEIDENT "[" TYPEIDENT "]"
                  "{" trait_member { NEWLINE trait_member } "}" ;
                  (* 至少一个方法; 关联类型可零个 (assoc-types-design.md) *)
trait_member    = trait_method | trait_assoc | trait_eff_assoc ;
trait_assoc     = "type" TYPEIDENT ;                              (* 裸声明: 无 bound 无默认 *)
trait_eff_assoc = "effect" TYPEIDENT [ "=" eff_ground_row ] ;     (* 可选默认行 (#369): impl 省略绑定即取默认 *)
trait_method    = "fn" IDENT "(" [ param_list ] ")" "->" type_expr [ effect ]
                  [ "=" expr ] ;                                  (* 带 = 即默认体 *)
impl_decl       = "impl" TYPEIDENT "[" type_expr "]"
                  "{" { fn_decl | impl_assoc | impl_eff_bind } "}" ;  (* 方法不写 pub/类型参数 *)
impl_assoc      = "type" TYPEIDENT "=" type_expr ;                (* 每个声明恰绑一次 *)
impl_eff_bind   = "effect" TYPEIDENT "=" eff_ground_row ;         (* 无默认者恰绑一次, 有默认者可省 *)
eff_ground_row  = "!" ( "(" ")" | "io" | TYPEIDENT ) ;            (* 具体行: !(), !io, 或一个已声明效果; 至多一个原子 *)

(* ---- effect (docs/effects-design.md, spec §6.5) ---- *)
effect_decl     = [ "pub" ] "effect" TYPEIDENT
                  "{" effect_op { NEWLINE effect_op } "}" ;
effect_op       = "fn" IDENT "(" [ param_list ] ")" "->" type_expr ;
                  (* 无体、无自己的效果注记、无类型参数 *)

(* ---- 语句与块 ---- *)
block           = "{" { stmt NEWLINE } [ expr ] "}" ;
stmt            = let_stmt | var_stmt | assign_stmt | for_stmt | while_stmt
                | local_fn_stmt | assert_stmt | with_stmt | expr ;

(* `with` 吞掉块的剩余部分, 变成一个闭包 (spec §4.10, §6.5)。
   `handle` 是上下文关键字: 只有它后面不是 `<-` 时才是 handler 子句。 *)
with_stmt       = "with" ( IDENT "<-" expr | handle_clause ) ;
handle_clause   = "handle" TYPEIDENT "{" { handler_cell NEWLINE }
                  handler_arm { NEWLINE handler_arm } "}" ;
handler_cell    = "var" IDENT ":" type_expr "=" expr ;  (* 全在臂之前, 标注强制 *)
handler_arm     = IDENT "(" [ lambda_params ] ")" [ resume_binder ] "=>" expr ;
(* 绑定子句在与不在, 就是臂的种类记号 (docs/oneshot-design.md §9 ③):
   不在 = 尾恢复臂, 拼写与编译均与今天相同; 在 = 控制臂, 拿到续延 `k`。
   `resume` 照 `handle` 先例做上下文关键字, 不保留: `fn resume` 照常声明。
   控制臂今天由检查器拒绝, 只有语法先落地。 *)
resume_binder   = "resume" IDENT ;
let_stmt        = "let" pattern [ ":" type_expr ] "=" expr ;
var_stmt        = "var" IDENT [ ":" type_expr ] "=" expr ;
assign_stmt     = IDENT "=" expr ;
for_stmt        = "for" pattern "in" expr [ ".." expr ] block ;  (* a..b 仅在 for 头 *)
while_stmt      = "while" expr block ;
local_fn_stmt   = "fn" IDENT "(" [ param_list ] ")" "->" type_expr [ "!" "io" ] "=" expr ;
assert_stmt     = "assert" expr ;

(* ---- 表达式, 按优先级 (spec §4.3 的 13 级) ---- *)
expr            = pipe_expr ;
pipe_expr       = or_expr { "|>" or_expr } ;
or_expr         = and_expr { "||" and_expr } ;
and_expr        = cmp_expr { "&&" cmp_expr } ;
cmp_expr        = bor_expr [ ( "==" | "!=" | "<" | "<=" | ">" | ">=" ) bor_expr ] ;
bor_expr        = bxor_expr { "|" bxor_expr } ;              (* 按位或, 仅 Int *)
bxor_expr       = band_expr { "^" band_expr } ;              (* 按位异或, 仅 Int *)
band_expr       = shift_expr { "&" shift_expr } ;            (* 按位与, 仅 Int *)
shift_expr      = concat_expr { ( "<<" | ">>" | ">>>" ) concat_expr } ;
concat_expr     = add_expr { "++" add_expr } ;               (* 右结合 *)
add_expr        = mul_expr { ( "+" | "-" ) mul_expr } ;
mul_expr        = unary_expr { ( "*" | "/" | "%" ) unary_expr } ;
unary_expr      = [ "not" | "-" | "~" ] postfix_expr ;
postfix_expr    = primary_expr { postfix } ;
postfix         = "?"                                        (* Result/Option 传播 *)
                | "!"                                        (* Option 解包, None panic *)
                | "." IDENT [ call_args | tail_block ]             (* 字段/方法 *)
                | "[" expr "]"                               (* List/Map 下标 *)
                | call_args                                  (* 应用: 须与 callee 同行 *)
                | tail_block ;                               (* 唯一尾实参形式, 见 spec 4.3 *)
tail_block      = "{" [ block_params "=>" ] block_body "}" ;
                  (* 同为最后一个实参 (#206)。EBNF 之外的四条边条件见 spec 4.3:
                     同行才吃; if/while/for/match 头部与 with callee 禁用 (nb);
                     前驱记号是 "}" 时拒; TYPEIDENT 后的 "{" 先归 record_expr。 *)
block_params    = IDENT
                | "(" [ lambda_params ] ")" ;
call_args       = "(" [ arg { "," arg } [ "," ] ] ")" ;
arg             = [ IDENT ":" ] expr ;                       (* 可按名传参 *)
                  (* 名字在每个调用位置都合法; 只有构造器接受, 由 checker 判 *)

primary_expr    = literal | IDENT | ctor_expr | record_expr
                | lambda | if_expr | match_expr
                | return_expr | "break" | "continue"
                | comptime_expr | unsafe_pure_expr | block | paren_or_tuple | list_lit ;
return_expr     = "return" [ expr ] ;                        (* 类型 Never; break/continue 同 *)
unsafe_pure_expr = "unsafe_pure" block ;

literal         = INT | FLOAT | STRING | CHAR | "true" | "false" | "(" ")" ;
                  (* CHAR 是 Int 字面量的语法糖, 值 = 码点; 详见 spec §1.5 *)
list_lit        = "[" [ list_elem { "," list_elem } [ "," ] ] "]" ;
list_elem       = expr                                       (* 普通元素 *)
                | ".." expr                                  (* 展开, spec §4.11 *)
                | if_no_else ;                               (* 条件元素, 0 或 1 个 *)
if_no_else      = "if" expr block { "else" "if" expr block } ;
                  (* 末尾没有 else; 带 else 的链是一个普通元素 *)
paren_or_tuple  = "(" expr { "," expr } ")" ;
ctor_expr       = TYPEIDENT ;                                (* 带实参的构造 = ctor_expr + call_args *)
record_expr     = TYPEIDENT "{" [ ".." expr "," ] rec_field { "," rec_field } [ "," ] "}" ;
rec_field       = IDENT [ ":" expr ] ;                       (* 同名简写 { x } *)
lambda          = "(" [ lambda_params ] ")" "=>" expr
                | IDENT "=>" expr ;                          (* 单参数, 括号可省 *)
                  (* "fn" 前缀已彻底退休 (#206 期 2): lambda 只在 primary 位,
                     且只有这两种写法; 表达式之后的 "(" 是应用, 故尾位的
                     裸 "(x) =>" 进不来 -- 与 f(a)(x) 撞; 唯一尾实参形式是
                     tail_block 的花括号头 "{ x => ... }"。
                     "(" 开头时先扫到配对的 ")" 看下一个记号是不是 "=>":
                     "(a: Int)" 是合法参数表而不是合法表达式, 覆盖文法不成立。 *)
lambda_params   = lambda_param { "," lambda_param } ;
lambda_param    = IDENT [ ":" type_expr ] ;
if_expr         = "if" expr block { "else" "if" expr block } [ "else" block ] ;
comptime_expr   = "comptime" block ;

match_expr      = "match" expr "{" match_arm { NEWLINE match_arm } "}" ;
match_arm       = pattern [ "if" expr ] "->" expr ;

(* ---- 模式 ---- *)
pattern         = pattern_atom { [ NEWLINE ] "|" [ NEWLINE ] pattern_atom } ;
pattern_atom    = "_" | pattern_literal | IDENT | ctor_pattern
                | "(" pattern ")"
                | "(" pattern "," pattern { "," pattern } [ "," ] ")"
                | "[" [ pat_list_items ] "]" ;
pattern_literal = [ "-" ] ( INT | FLOAT ) | STRING | CHAR | "true" | "false" ;
ctor_pattern    = [ IDENT "." ] TYPEIDENT
                  [ "(" [ pat_args ] ")" | "{" [ pat_fields ] "}" ] ;
pat_args        = ".." | pat_arg { "," pat_arg } [ "," [ ".." ] ] ;
pat_arg         = [ IDENT ":" ] pattern ;
pat_fields      = ".." | pat_field { "," pat_field } [ "," [ ".." ] ] ;
pat_field       = IDENT [ ":" pattern ] ;
pat_list_items  = pattern { "," pattern } [ "," ]
                | [ pattern { "," pattern } "," ] ".." [ IDENT ]
                  [ "," pattern { "," pattern } ] [ "," ] ;
