compiler/src/main/kotlin/dawn/parse/Parser.kt
package dawn.parse

import dawn.ast.*
import dawn.diag.DawnError
import dawn.diag.DiagnosticSink
import dawn.diag.Span
import dawn.lex.Lexer
import dawn.lex.StrSegment
import dawn.lex.Token
import dawn.lex.TokenType
import dawn.lex.TokenType.*

/**
 * Recursive descent. M0 subset: fn declarations + statements + expressions.
 * Top-level declarations beyond M0 (type/const/use/test) get explicit
 * "not implemented" errors.
 *
 * Error recovery: parse failures throw DawnError internally; recovery points
 * (statement and declaration boundaries) catch it, report to the sink, and
 * resynchronize — so one broken statement never hides the rest of the file.
 */
class Parser(
    tokens: List<Token>,
    private val sink: DiagnosticSink = DiagnosticSink(),
    /** original source text, for slicing assert messages; null in sub-parsers */
    private val source: String? = null,
) {

    private val toks = tokens
    private var pos = 0

    /**
     * In header positions (match scrutinee, if/while conditions, for bounds) a
     * top-level `Type { ... }` record literal would be ambiguous with the block
     * that follows — so it is banned there (same rule as Rust). Any inner
     * bracket/brace re-allows it.
     */
    private var noStructLit = false

    private fun <T> headerExpr(body: () -> T): T {
        val old = noStructLit
        noStructLit = true
        try { return body() } finally { noStructLit = old }
    }

    private fun <T> bracketed(body: () -> T): T {
        val old = noStructLit
        noStructLit = false
        try { return body() } finally { noStructLit = old }
    }

    // ---- token cursor ----

    private fun peek(ahead: Int = 0): Token = toks[(pos + ahead).coerceAtMost(toks.size - 1)]
    private fun at(type: TokenType) = peek().type == type
    private fun advance(): Token = toks[pos].also { if (pos < toks.size - 1) pos++ }

    private fun expect(type: TokenType, what: String): Token {
        if (!at(type)) throw err("expected $what, found `${peek().text}`")
        return advance()
    }

    private fun err(msg: String, hint: String? = null) = DawnError(msg, peek().span, hint)

    private fun skipNewlines() {
        while (at(NEWLINE)) advance()
    }

    /** Separator between statements/declarations: at least one NEWLINE (or block end / EOF). */
    private fun expectSeparator() {
        if (at(NEWLINE)) { skipNewlines(); return }
        if (at(RBRACE) || at(EOF)) return
        throw err("expected a newline after this statement",
            "one statement per line; check whether the previous statement is complete")
    }

    // ---- module ----

    fun module(): Module {
        val decls = ArrayList<Decl>()
        skipNewlines()
        while (!at(EOF)) {
            try {
                decls.add(topDecl())
            } catch (e: DawnError) {
                sink.add(e)
                syncToNextDecl()
            }
            skipNewlines()
        }
        return Module(decls)
    }

    /** After a broken declaration: skip forward to the next plausible declaration start. */
    private fun syncToNextDecl() {
        if (!at(EOF)) advance() // always make progress
        while (!at(EOF) && !at(FN) && !at(PUB) && !at(TYPE) && !at(CONST)) advance()
    }

    private fun topDecl(): Decl {
        val pub = if (at(PUB)) { advance(); true } else false
        return when (peek().type) {
            FN -> fnDecl(pub)
            TYPE -> typeDecl(pub)
            CONST -> constDecl(pub)
            TEST -> {
                if (pub) throw err("test blocks cannot be pub")
                testDecl()
            }
            USE -> {
                if (pub) throw err("use declarations cannot be pub")
                useDecl()
            }
            else -> throw err("only declarations (fn, type, const, test) are allowed at module top level")
        }
    }

    /** use java "java.lang.StringBuilder" (spec §9); module imports arrive with M4 */
    private fun useDecl(): Decl {
        val kw = advance() // use
        if (!at(JAVA))
            throw err("module imports (use foo/bar) are not implemented yet",
                "only `use java \"fully.qualified.Name\"` is available (spec §9)")
        advance() // java
        val s = expect(STRING, "a quoted fully-qualified class name")
        if (s.segments.any { it is StrSegment.Code })
            throw DawnError("a class name cannot contain interpolation", s.span)
        val fqcn = s.segments.joinToString("") { (it as StrSegment.Text).value }
        if (fqcn.isBlank() || fqcn.substringAfterLast('.').firstOrNull()?.isUpperCase() != true)
            throw DawnError("expected a fully-qualified class name like \"java.lang.StringBuilder\"", s.span)
        return UseJavaDecl(fqcn, Span(kw.span.start, s.span.end), s.span)
    }

    /** const NAME: Type = expr — the initializer is implicitly comptime (spec §3.2) */
    private fun constDecl(pub: Boolean): ConstDecl {
        val kw = expect(CONST, "`const`")
        val name = expect(TYPEIDENT, "a constant name (SCREAMING_SNAKE_CASE)")
        if (name.text.any { it.isLowerCase() })
            throw DawnError("constant names are SCREAMING_SNAKE_CASE", name.span,
                "lowercase names are values, UpperCamelCase names are types/constructors (spec §1.3)")
        expect(COLON, "`:` (constants must declare their type)")
        val t = typeRef()
        expect(EQ, "`=`")
        skipNewlines()
        val init = expression()
        return ConstDecl(pub, name.text, t, init, Span(kw.span.start, init.span.end), name.span)
    }

    /** test "name" { ... } */
    private fun testDecl(): TestDecl {
        val kw = advance() // test
        val nameTok = expect(STRING, "a test name string")
        if (nameTok.segments.any { it is StrSegment.Code })
            throw DawnError("test names cannot contain interpolation", nameTok.span)
        val name = nameTok.segments.joinToString("") { (it as StrSegment.Text).value }
        val body = block()
        return TestDecl(name, body, Span(kw.span.start, body.span.end), nameTok.span)
    }

    // ---- type declarations ----

    /** [T, U] on fn/type declarations */
    private fun typeParams(): List<String> {
        if (!at(LBRACKET)) return emptyList()
        advance()
        val names = ArrayList<String>()
        while (!at(RBRACKET)) {
            names.add(expect(TYPEIDENT, "a type parameter name (uppercase)").text)
            if (at(COMMA)) advance() else break
        }
        expect(RBRACKET, "`]`")
        if (names.isEmpty()) throw err("type parameter list cannot be empty")
        return names
    }

    private fun typeDecl(pub: Boolean): TypeDecl {
        val kw = expect(TYPE, "`type`")
        val name = expect(TYPEIDENT, "a type name (uppercase)")
        val tparams = typeParams()
        expect(EQ, "`=`")
        if (at(LBRACE)) return recordDecl(pub, kw, name, tparams)
        val ctors = ArrayList<CtorDecl>()
        if (at(PIPE)) advance() // leading | is optional
        skipNewlines()
        ctors.add(ctorDecl())
        while (true) {
            // constructors usually sit one per line, | first (like vertical pipes)
            var look = pos
            while (toks[look].type == NEWLINE) look++
            if (toks[look].type != PIPE) break
            pos = look + 1
            skipNewlines()
            ctors.add(ctorDecl())
        }
        return TypeDecl(pub, name.text, tparams, ctors, isRecord = false,
            Span(kw.span.start, ctors.last().span.end), name.span)
    }

    /** type Point = { x: Float, y: Float } — a single-constructor product type */
    private fun recordDecl(pub: Boolean, kw: Token, name: Token, tparams: List<String>): TypeDecl {
        advance() // {
        skipNewlines()
        val fields = ArrayList<FieldDecl>()
        while (!at(RBRACE)) {
            val f = expect(IDENT, "a field name")
            expect(COLON, "`:` (record fields must be typed)")
            val t = typeRef()
            fields.add(FieldDecl(f.text, t, Span(f.span.start, t.span.end)))
            skipNewlines()
            if (at(COMMA)) { advance(); skipNewlines() } else break
        }
        val close = expect(RBRACE, "`}`")
        if (fields.isEmpty())
            throw DawnError("a record must declare at least one field", Span(kw.span.start, close.span.end))
        val ctor = CtorDecl(name.text, fields, Span(name.span.start, close.span.end), name.span)
        return TypeDecl(pub, name.text, tparams, listOf(ctor), isRecord = true,
            Span(kw.span.start, close.span.end), name.span)
    }

    private fun ctorDecl(): CtorDecl {
        val name = expect(TYPEIDENT, "a constructor name (uppercase)")
        val fields = ArrayList<FieldDecl>()
        var end = name.span.end
        if (at(LPAREN)) {
            advance()
            skipNewlines()
            while (!at(RPAREN)) {
                val f = expect(IDENT, "a field name (constructor fields must be named)")
                expect(COLON, "`:` (constructor fields must be typed)")
                val t = typeRef()
                fields.add(FieldDecl(f.text, t, Span(f.span.start, t.span.end)))
                skipNewlines()
                if (at(COMMA)) { advance(); skipNewlines() } else break
            }
            val close = expect(RPAREN, "`)`")
            end = close.span.end
            if (fields.isEmpty())
                throw DawnError("a constructor with `()` must declare at least one field",
                    Span(name.span.start, end), "drop the parentheses for a no-payload constructor: ${name.text}")
        }
        return CtorDecl(name.text, fields, Span(name.span.start, end), name.span)
    }

    private fun fnDecl(pub: Boolean): FnDecl {
        val fnTok = expect(FN, "`fn`")
        val nameTok = expect(IDENT, "a function name (lowercase)")
        val tparams = typeParams()
        expect(LPAREN, "`(`")
        val params = ArrayList<Param>()
        skipNewlines()
        while (!at(RPAREN)) {
            val pName = expect(IDENT, "a parameter name")
            expect(COLON, "`:` (top-level function parameters must be typed)")
            val pType = typeRef()
            params.add(Param(pName.text, pType, pName.span))
            skipNewlines()
            if (at(COMMA)) { advance(); skipNewlines() } else break
        }
        expect(RPAREN, "`)`")
        expect(ARROW, "`->` (top-level functions must declare a return type)")
        val ret = typeRef()
        var declaredEff: String? = null
        if (at(BANG)) {
            advance()
            declaredEff = expect(IDENT, "an effect name (io or an effect variable)").text
        }
        expect(EQ, "`=` (function body)")
        skipNewlines()
        val body = expression()
        return FnDecl(pub, nameTok.text, tparams, params, ret, declaredEff, body,
            Span(fnTok.span.start, body.span.end), nameTok.span)
    }

    private fun typeRef(): TypeRef {
        if (at(FN)) return fnTypeRef()
        if (at(LPAREN)) return tupleTypeRef()
        val t = expect(TYPEIDENT, "a type name (uppercase)")
        if (!at(LBRACKET)) return NamedTypeRef(t.text, emptyList(), t.span)
        advance()
        val args = ArrayList<TypeRef>()
        while (!at(RBRACKET)) {
            args.add(typeRef())
            if (at(COMMA)) advance() else break
        }
        val close = expect(RBRACKET, "`]`")
        if (args.isEmpty()) throw err("type argument list cannot be empty")
        return NamedTypeRef(t.text, args, Span(t.span.start, close.span.end))
    }

    /** (A, B) — tuple type, 2 to 8 elements */
    private fun tupleTypeRef(): TypeRef {
        val open = advance() // (
        val elems = ArrayList<TypeRef>()
        while (!at(RPAREN)) {
            elems.add(typeRef())
            if (at(COMMA)) advance() else break
        }
        val close = expect(RPAREN, "`)`")
        val span = Span(open.span.start, close.span.end)
        if (elems.size < 2)
            throw DawnError("a tuple type needs at least 2 elements", span,
                "for a single type, drop the parentheses")
        if (elems.size > 8) throw DawnError("tuples have at most 8 elements", span)
        return TupleTypeRef(elems, span)
    }

    /** fn(A, B) -> C !e */
    private fun fnTypeRef(): TypeRef {
        val kw = advance() // fn
        expect(LPAREN, "`(`")
        val params = ArrayList<TypeRef>()
        while (!at(RPAREN)) {
            params.add(typeRef())
            if (at(COMMA)) advance() else break
        }
        expect(RPAREN, "`)`")
        expect(ARROW, "`->`")
        val ret = typeRef()
        var effName: String? = null
        var end = ret.span.end
        if (at(BANG)) {
            advance()
            if (at(LPAREN)) throw err("effect unions !(e1 | e2) are not implemented yet")
            val eff = expect(IDENT, "an effect name (io or an effect variable)")
            effName = eff.text
            end = eff.span.end
        }
        return FnTypeRef(params, ret, effName, Span(kw.span.start, end))
    }

    // ---- statements ----

    private fun statement(): Stmt {
        return when (peek().type) {
            LET -> letStmt(mutable = false)
            VAR -> letStmt(mutable = true)
            WHILE -> whileStmt()
            FOR -> forStmt()
            ASSERT -> assertStmt()
            IDENT -> {
                // assignment: IDENT = ... (as opposed to == comparison)
                if (peek(1).type == EQ) assignStmt() else exprStmt()
            }
            else -> exprStmt()
        }
    }

    private fun letStmt(mutable: Boolean): Stmt {
        val kw = advance() // let / var
        // destructuring: let (a, b) = pair / let Point { x, y } = p / let [..all] = xs
        if (at(LPAREN) || at(TYPEIDENT) || at(LBRACKET)) {
            val pat = pattern()
            if (at(COLON))
                throw err("destructuring lets cannot take a type annotation",
                    "annotate inside the pattern's source instead")
            expect(EQ, "`=`")
            skipNewlines()
            val init = expression()
            return LetPatStmt(pat, mutable, init, Span(kw.span.start, init.span.end))
        }
        val name = when {
            at(IDENT) -> advance()
            at(UNDERSCORE) -> {
                if (mutable) throw err("`var _` is meaningless")
                advance()
            }
            else -> throw err("expected a variable name")
        }
        val ann = if (at(COLON)) { advance(); typeRef() } else null
        expect(EQ, "`=`")
        skipNewlines()
        val init = expression()
        return LetStmt(name.text, mutable, ann, init, Span(kw.span.start, init.span.end))
    }

    private fun assignStmt(): Stmt {
        val name = advance()
        advance() // =
        skipNewlines()
        val value = expression()
        return AssignStmt(name.text, value, name.span, Span(name.span.start, value.span.end))
    }

    private fun whileStmt(): Stmt {
        val kw = advance()
        val cond = headerExpr { expression() }
        val body = block()
        return WhileStmt(cond, body, Span(kw.span.start, body.span.end))
    }

    private fun forStmt(): Stmt {
        val kw = advance()
        val name = expect(IDENT, "a loop variable name")
        expect(IN, "`in`")
        val from = headerExpr { expression() }
        var to: Expr? = null
        if (at(DOTDOT)) {
            advance()
            to = headerExpr { expression() }
        }
        val body = block()
        return ForStmt(name.text, from, to, body, Span(kw.span.start, body.span.end))
    }

    private fun exprStmt(): Stmt {
        val e = expression()
        return ExprStmt(e, e.span)
    }

    private fun assertStmt(): Stmt {
        val kw = advance() // assert
        val cond = expression()
        val stmt = AssertStmt(cond, Span(kw.span.start, cond.span.end))
        stmt.sourceText = source?.substring(cond.span.start, cond.span.end.coerceAtMost(source.length))
        return stmt
    }

    // ---- expressions (by precedence) ----

    fun expression(): Expr = pipeExpr()

    private fun pipeExpr(): Expr {
        var left = orExpr()
        while (true) {
            // vertical pipes: |> may start the next line
            var look = pos
            while (toks[look].type == NEWLINE) look++
            if (toks[look].type != PIPEGT) break
            pos = look + 1
            skipNewlines()
            val rhs = orExpr()
            left = when (rhs) {
                is Call -> Call(rhs.callee, listOf(left) + rhs.args, rhs.calleeSpan,
                    Span(left.span.start, rhs.span.end))
                is VarRef -> Call(rhs.name, listOf(left), rhs.span,
                    Span(left.span.start, rhs.span.end))
                is Lambda -> Apply(rhs, listOf(left), Span(left.span.start, rhs.span.end))
                else -> throw DawnError("the right side of `|>` must be a call, a function name, or a lambda",
                    rhs.span, "x |> f(a) is equivalent to f(x, a)")
            }
        }
        return left
    }

    private fun orExpr(): Expr = leftAssoc({ andExpr() }, mapOf(PIPEPIPE to BinOp.OR))
    private fun andExpr(): Expr = leftAssoc({ cmpExpr() }, mapOf(AMPAMP to BinOp.AND))

    private fun cmpExpr(): Expr {
        val left = concatExpr()
        val op = when (peek().type) {
            EQEQ -> BinOp.EQ; NEQ -> BinOp.NEQ
            LT -> BinOp.LT; LE -> BinOp.LE; GT -> BinOp.GT; GE -> BinOp.GE
            else -> return left
        }
        val opTok = advance()
        skipNewlines()
        val right = concatExpr()
        val result = Binary(op, left, right, opTok.span, Span(left.span.start, right.span.end))
        // comparisons are non-associative: a < b < c is an error
        when (peek().type) {
            EQEQ, NEQ, LT, LE, GT, GE ->
                throw err("comparison operators cannot be chained", "write a < b && b < c")
            else -> {}
        }
        return result
    }

    private fun concatExpr(): Expr {
        // right-associative
        val left = addExpr()
        if (!at(PLUSPLUS)) return left
        val opTok = advance()
        skipNewlines()
        val right = concatExpr()
        return Binary(BinOp.CONCAT, left, right, opTok.span, Span(left.span.start, right.span.end))
    }

    private fun addExpr(): Expr = leftAssoc({ mulExpr() }, mapOf(PLUS to BinOp.ADD, MINUS to BinOp.SUB))
    private fun mulExpr(): Expr =
        leftAssoc({ unaryExpr() }, mapOf(STAR to BinOp.MUL, SLASH to BinOp.DIV, PERCENT to BinOp.MOD))

    private fun leftAssoc(next: () -> Expr, ops: Map<TokenType, BinOp>): Expr {
        var left = next()
        while (ops.containsKey(peek().type)) {
            val opTok = advance()
            skipNewlines()
            val right = next()
            left = Binary(ops[opTok.type]!!, left, right, opTok.span, Span(left.span.start, right.span.end))
        }
        return left
    }

    private fun unaryExpr(): Expr {
        if (at(NOT)) {
            val tok = advance()
            val operand = unaryExpr()
            return Unary(UnOp.NOT, operand, Span(tok.span.start, operand.span.end))
        }
        if (at(MINUS)) {
            val tok = advance()
            val operand = unaryExpr()
            return Unary(UnOp.NEG, operand, Span(tok.span.start, operand.span.end))
        }
        return postfixExpr()
    }

    private fun postfixExpr(): Expr {
        var e = primaryExpr()
        while (true) {
            when (peek().type) {
                QUESTION -> {
                    val q = advance()
                    e = Propagate(e, Span(e.span.start, q.span.end))
                }
                DOT -> {
                    advance()
                    val f = expect(IDENT, "a field or function name after `.`")
                    if (at(LPAREN)) {
                        e = bracketed {
                            advance()
                            skipNewlines()
                            val args = ArrayList<Expr>()
                            while (!at(RPAREN)) {
                                args.add(expression())
                                skipNewlines()
                                if (at(COMMA)) { advance(); skipNewlines() } else break
                            }
                            val close = expect(RPAREN, "`)`")
                            MethodCall(e, f.text, args, f.span, Span(e.span.start, close.span.end))
                        }
                    } else {
                        e = FieldAccess(e, f.text, f.span, Span(e.span.start, f.span.end))
                    }
                }
                else -> return e
            }
        }
    }

    private fun primaryExpr(): Expr {
        val t = peek()
        return when (t.type) {
            INT -> { advance(); IntLit(t.intValue, t.span) }
            FLOAT -> { advance(); FloatLit(t.floatValue, t.span) }
            TRUE -> { advance(); BoolLit(true, t.span) }
            FALSE -> { advance(); BoolLit(false, t.span) }
            STRING -> { advance(); strLit(t) }
            IDENT -> identOrCall()
            IF -> ifExpr()
            MATCH -> matchExpr()
            LBRACE -> block()
            LPAREN -> parenExpr()
            LBRACKET -> listLit()
            FN -> lambda()
            COMPTIME -> {
                val kw = advance()
                val body = block()
                ComptimeExpr(body, Span(kw.span.start, body.span.end))
            }
            TYPEIDENT -> ctorExpr()
            else -> throw err("expected an expression, found `${t.text}`")
        }
    }

    /** Circle(1.0) / Rect(2.0, h: 3.0) / bare nullary Point / Point { x: 1.0 } / Point { ..p, x: 3.0 } */
    private fun ctorExpr(): Expr {
        val name = advance()
        if (at(LPAREN)) return bracketed { ctorParenArgs(name) }
        if (at(LBRACE) && !noStructLit) return bracketed { recordLit(name) }
        return CtorCall(name.text, emptyList(), spread = null, hasParens = false, name.span, name.span)
    }
